--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://liiiillillliii.github.io/index.html"> <div id="overlay"><h1>Go Further</h1></div></a>
+    <a href="https://liiiillillliii.github.io/txt.html.html"> <div id="overlay"><h1>Go Further</h1></div></a>
 <div id="hey"><div id="layer-up"></div></div>
 <div id="layer-0">
 	
